# graduationMgm

./: .gitignore  LICENSE  README.md  change_roles.ipynb  pyproject.toml  rascunhos.ipynb
Deep_Q_Networks/: DQN.py  Dueling_DQN.py
Evaluating Reinforcement Learning on Robocup Soccer Simulation 2D/: TODO.txt  abnt.bst  abstract.tex  acronyms.tex  agradecimentos.tex  references.bib  resumo.tex  risethesis.cls  risethesis.fdb_latexmk  risethesis.fls  risethesis.tex
Evaluating Reinforcement Learning on Robocup Soccer Simulation 2D/appendix/: table-features.tex
Evaluating Reinforcement Learning on Robocup Soccer Simulation 2D/chapters/: architecture.tex  background.tex  conclusion.tex  environment.tex  introduction.tex  results.tex  ss2d.tex
Evaluating Reinforcement Learning on Robocup Soccer Simulation 2D/proposal/: assinaturas.tex  avaliadores.tex  flow.tex  introduction.tex  methodology.tex  objectives.tex  schedule.tex
HFO_mgm/: CMakeLists.txt  setup.py
HFO_mgm/hfo/: hfo.py  hfo_c_wrapper.cpp  hfo_c_wrapper.h
HFO_mgm/src/: HFO.cpp  HFO.hpp  agent.cpp  agent.h  bhv_basic_move.cpp  bhv_block.cpp  bhv_marlik_block.cpp  bhv_marlik_block.h  bhv_marlik_move.cpp  bhv_marlik_move.h  common.hpp  feature_extractor.cpp  feature_extractor.h  fm_feature_extractor.cpp  fm_feature_extractor.h  highlevel_feature_extractor.cpp  highlevel_feature_extractor.h  role_center_back.cpp  strategy.cpp  (+10 more)
agents/: agent.py  agent1.py  agent2.py  agent3.py  agent_1.py  agent_2.py  agent_3.py  agent_4.py  agent_ddpg_free_model.py  agent_ddpg_gexp.py  agent_ddqn.py  agents_ddpg.py  base_agent.py  base_agent_ddpg.py  comm_agent.py  dqnbased_agent.py  model_socket.py
formations-dt/: defense-formation.conf  normal-formation.conf
lib/: Base_Agent.py  DDQN_Agent.py  DDQN_train.py  DQN_Agent.py  DQN_train.py  hfo_env.py  hyperparameters.py  prioritized_experience_replay.py  utils.py
shells/: DQN.sh  run_agent.sh  run_agent1.sh  run_agent2.sh  run_agent3.sh  run_screens.sh
(+38 files in other folders)
