[tool.poetry]
name = "RCSoccerSimulation2d-graduation-mgm4"
version = "0.1.0"
description = "Graduation MGM4@cin.ufpe.br"
authors = ["mgm4@cin.ufpe.br"]
license = ""

[tool.poetry.dependencies]
python = "^3.6.7"
python-decouple = "=3.1"
pandas = "=0.24.2"
joblib = "=0.13.2"
jsonlines = "=1.2.0"
python-json-logger = "=0.1.11"
pympler = "=0.7"
matplotlib = "^3.1"
scipy = "^1.3"
jupyter = "^1.0"
sympy = "^1.4"
nose = "^1.3"

[tool.poetry.dev-dependencies]
autopep8 = "=1.4.4"
coverage = "=4.5.3"
coveralls = "=1.7.0"
ipdb = "=0.12"
jupyter = "=1.0.0"
pep8 = "=1.7.1"
pre-commit = "=1.16.1"
pycodestyle = "=2.5.0"
pylint = "=2.3.1"
pytest = "=4.5.0"
pytest-asyncio = "=0.10.0"
pytest-cov = "=2.7.1"
pytest-freezegun = "=0.3.0"
pytest-mock = "=1.10.4"
pytest-sugar = "=0.9.2"
mock = "=3.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
